[workspace]
default-members = ["frontend_egui"]
resolver = '2'
members = ["core", "floppy", "frontend_egui", "nat", "testrunner"]

[workspace.lints.clippy]
nursery = { level = "deny", priority = -1 }

cast_possible_truncation = "allow"
cognitive_complexity = "allow"
# I find this less readable
comparison_chain = "allow"
doc_markdown = "allow"
option_if_let_else = "allow"
missing_const_for_fn = "allow"
new_without_default = "allow"
iter_nth_zero = "allow"
unit_arg = "allow"
single_match = "allow"

explicit_iter_loop = "deny"
large_enum_variant = "deny"
large_types_passed_by_value = "deny"
large_stack_frames = "deny"
needless_pass_by_value = "deny"
semicolon_if_nothing_returned = "deny"

[profile.test]
opt-level = 3
debug = true

[patch.crates-io]
ecolor = { git = "https://github.com/twvd/snow-egui.git", rev = "628a7a4b455f355fafb1d47c9e6870effab96eb5"}
emath = { git = "https://github.com/twvd/snow-egui.git", rev = "628a7a4b455f355fafb1d47c9e6870effab96eb5"}
epaint = { git = "https://github.com/twvd/snow-egui.git", rev = "628a7a4b455f355fafb1d47c9e6870effab96eb5"}
egui = { git = "https://github.com/twvd/snow-egui.git", rev = "628a7a4b455f355fafb1d47c9e6870effab96eb5"}
egui-winit = { git = "https://github.com/twvd/snow-egui.git", rev = "628a7a4b455f355fafb1d47c9e6870effab96eb5"}

egui-file-dialog = { git = "https://github.com/twvd/snow-egui-file-dialog.git", rev = "7504d855c587129b36092cea818fafd2153a311b" }
