[workspace]
default-members = ["frontend_egui"]
resolver = '2'
members = ["core", "floppy", "frontend_egui", "nat", "testrunner"]

[workspace.lints.clippy]
nursery = { level = "deny", priority = -1 }

cast_possible_truncation = "allow"
cognitive_complexity = "allow"
# I find this less readable
comparison_chain = "allow"
doc_markdown = "allow"
option_if_let_else = "allow"
missing_const_for_fn = "allow"
new_without_default = "allow"
iter_nth_zero = "allow"
unit_arg = "allow"
single_match = "allow"

explicit_iter_loop = "deny"
large_enum_variant = "deny"
large_types_passed_by_value = "deny"
large_stack_frames = "deny"
needless_pass_by_value = "deny"
semicolon_if_nothing_returned = "deny"

[profile.test]
opt-level = 3
debug = true

# Patch egui to fix menubar hover behavior.
# See https://github.com/twvd/snow/pull/251#issuecomment-4103953334
[patch.crates-io]
ecolor = { git = "https://github.com/twvd/snow-egui.git", rev = "7e06cfd6261d3e42a15002fe80816fba88557dc1"}
emath = { git = "https://github.com/twvd/snow-egui.git", rev = "7e06cfd6261d3e42a15002fe80816fba88557dc1"}
epaint = { git = "https://github.com/twvd/snow-egui.git", rev = "7e06cfd6261d3e42a15002fe80816fba88557dc1"}
egui = { git = "https://github.com/twvd/snow-egui.git", rev = "7e06cfd6261d3e42a15002fe80816fba88557dc1"}
egui-winit = { git = "https://github.com/twvd/snow-egui.git", rev = "7e06cfd6261d3e42a15002fe80816fba88557dc1"}