[package]
name = "snow_core"
version = "0.1.0"
edition = "2021"

[features]
mmap = ["dep:fs2", "dep:memmap2"]

[lints]
workspace = true

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
arrayvec = { version = "0.7.4", features = ["serde"] }
chrono = "0.4.38"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
either = "1.13.0"
flate2 = "1.0.30"
fs2 = { version = "0.4.3", optional = true }
itertools = "0.13.0"
log = { version = "0.4.22", features = ["std"] }
memmap2 = { version = "0.9.4", optional = true }
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
proc-bitfield = "0.5.2"
serde = { version = "1.0.203", features = ["serde_derive", "derive"] }
serde_json = "1.0.117"
snow_floppy = { version = "0.1.0", path = "../floppy" }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.61"
hex-literal = "0.4.1"
sha2 = "0.10.8"
rand = "0.9.0"
bit-set = { version = "0.8.0", features = ["serde"] }
hex = "0.4.3"
arpfloat = { version = "0.1.11", default-features = false, features = ["std"] }
