[package]
name = "snow_core"
version = "1.2.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
built = { version = "0.8.0", features = ["chrono", "git2"] }

[features]
# Enables the Daynaport SCSI/Link Ethernet device emulation
ethernet = ["dep:crc"]
# Enables Ethernet bridging (currently broken!)
ethernet_raw = ["ethernet", "dep:pnet"]
# Enables Ethernet over userland NAT
ethernet_nat = ["ethernet", "dep:snow_nat"]
# Enables Ethernet bridging via TAP interface (Linux only)
ethernet_tap = ["ethernet", "dep:tun", "nix/poll", "dep:pnet"]
# Enables memory mapped files for SCSI devices and RTC PRAM
# Without this feature, disks will be read-only.
mmap = ["dep:fs2", "dep:memmap2"]
# Enables save state saving and loading
savestates = ["dep:binrw", "dep:postcard", "dep:zstd"]

[lints]
workspace = true

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
arrayvec = { version = "0.7.4", features = ["serde"] }
biquad = "0.4.2"
built = { version = "0.8.0", features = ["chrono", "git2"] }
chrono = "0.4.38"
crc = { version = "3.2.1", optional = true }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
either = "1.13.0"
flate2 = "1.0.30"
fs2 = { version = "0.4.3", optional = true }
itertools = "0.13.0"
log = { version = "0.4.22", features = ["std"] }
memmap2 = { version = "0.9.4", optional = true }
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
proc-bitfield = "0.5.2"
serde = { version = "1.0.203", features = ["serde_derive", "derive"] }
serde_json = "1.0.117"
snow_floppy = { version = "1.2.0", path = "../floppy" }
snow_nat = { version = "1.2.0", path = "../nat", optional = true }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.61"
sha2 = "0.10.8"
rand = "0.9.0"
bit-set = { version = "0.8.0", features = ["serde"] }
hex = "0.4.3"
arpfloat = { version = "0.1.11", default-features = false, features = ["std"] }
serde-big-array = "0.5.1"
typetag = "0.2.20"
postcard = { version = "1.1.3", features = ["use-std"], optional = true }
binrw = { version = "0.15.0", optional = true }
zstd = { version = "0.13.3", optional = true }
socket2 = { version = "0.6", features = ["all"] }
pnet = { version = "0.35.0", optional = true }
tun = { version = "0.7", optional = true, default-features = false }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["term", "fs"] }
