[package]
name = "snow_frontend_egui"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
built = { version = "0.8.0", features = ["chrono", "git2"] }

[dependencies]
anyhow = "1.0.95"
built = { version = "0.8.0", features = ["chrono", "git2"] }
chrono = "0.4.40"
clap = { version = "4.5.23", features = ["derive"] }
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
eframe = "0.30.0"
egui-dropdown = "0.12.0"
egui-file-dialog = "0.9.0"
egui-toast = "0.16.0"
egui-winit = "0.30.0"
egui_extras = "0.30.0"
egui_logger = "0.6.2"
egui_material_icons = "0.2.0"
env_logger = "0.11.6"
hadris-iso = { git = "https://github.com/hxyulin/hadris", rev = "8bf2df25d7bfb2aab0b068bfa13d6ad1a244df5e" }
hex = "0.4.3"
hex-literal = "0.4.1"
itertools = "0.14.0"
log = "0.4.22"
multi_log = "0.1.2"
num-derive = "0.4.2"
num-traits = "0.2.19"
pathdiff = "0.2.3"
png = "0.17.16"
rand = "0.9.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
snow_core = { version = "1.0.0", path = "../core", features = ["mmap"] }
snow_floppy = { version = "1.0.0", path = "../floppy" }
strum = "0.26.3"

[target.'cfg(target_os = "macos")'.dependencies]
# https://github.com/twvd/snow/issues/106
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"

[target.'cfg(target_os = "freebsd")'.dependencies]
# https://github.com/twvd/snow/issues/49
sdl2 = { version = "0.37.0", features = ["use-pkgconfig"] }

[target.'cfg(not(target_os = "freebsd"))'.dependencies]
sdl2 = { version = "0.37.0", features = ["static-link", "use-pkgconfig"] }

[lints]
workspace = true
