[package]
name = "snow_frontend_egui"
version = "1.2.0"
edition = "2021"
build = "build.rs"

[features]
default = ["ethernet", "ethernet_nat", "ethernet_tap"]
ethernet = ["snow_core/ethernet"]
ethernet_nat = ["ethernet", "snow_core/ethernet_nat"]
ethernet_raw = ["ethernet", "snow_core/ethernet_raw", "dep:pnet"]
ethernet_tap = ["ethernet", "snow_core/ethernet_tap", "dep:pnet"]
sdl2-bundled = ["sdl2/bundled"]
sdl2-static = ["sdl2/static-link"]

[build-dependencies]
winresource = "0.1.23"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.40"
clap = { version = "4.5.23", features = ["derive"] }
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
eframe = "=0.30.0"
egui-dropdown = "=0.12.0"
egui-file-dialog = "=0.9.0"
egui-toast = "=0.16.0"
egui-winit = "=0.30.0"
egui_extras = "=0.30.0"
egui_logger = "=0.6.2"
egui_material_icons = "=0.2.0"
env_logger = "0.11.6"
hadris-iso = { git = "https://github.com/hxyulin/hadris", rev = "8bf2df25d7bfb2aab0b068bfa13d6ad1a244df5e" }
hex = "0.4.3"
hex-literal = "0.4.1"
itertools = "0.14.0"
log = "0.4.22"
multi_log = "0.1.2"
num-derive = "0.4.2"
once_cell = "1.20"
num-traits = "0.2.19"
pathdiff = "0.2.3"
png = "0.17.16"
rand = "0.9.1"
pnet = { version = "0.35.0", optional = true }
sdl2 = { version = "0.37.0", features = ["use-pkgconfig"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
snow_core = { version = "1.2.0", path = "../core", features = ["mmap", "savestates"] }
snow_floppy = { version = "1.2.0", path = "../floppy" }
strum = "0.26.3"

[target.'cfg(target_os = "macos")'.dependencies]
# https://github.com/twvd/snow/issues/106
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"

[lints]
workspace = true
