[package]
name = "snow_frontend_tui"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.10", features = ["derive"] }
log = { version = "0.4.22", features = ["std"] }
ratatui = "0.27.0"
sdl2 = { version = "0.37.0", features = ["unsafe_textures"] }
snow_core = { path = "../core", features = ["mmap"] }
tui-logger = { version = "0.11.2", features = ["crossterm"] }
snow_floppy = { version = "0.1.0", path = "../floppy" }
crossbeam-channel = "0.5.13"
