[package]
name = "frontend_web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
crossbeam-channel = "0.5.13"
env_logger = "0.11.5"
log = "0.4.22"
sdl2 = { version = "0.37.0", features = ["unsafe_textures"] }
snow_core = { version = "0.1.0", path = "../core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
emscripten_main_loop = "0.1.1"
wasm-bindgen = "0.2.95"

[lints]
workspace = true
