[package]
name = "snow_nat"
version = "1.2.0"
edition = "2021"

[features]
https_stripping = ["dep:rustls", "dep:rustls-native-certs", "dep:rustls-pki-types"]

[dependencies]
smoltcp = "0.11"
crossbeam-channel = "0.5"
log = "0.4"
anyhow = "1.0"
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
rustls-native-certs = { version = "0.8", optional = true }
rustls-pki-types = { version = "1", optional = true }

[lints]
workspace = true
