[package]
name = "testrunner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
png = "0.17.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
snow_core = { version = "0.1.0", path = "../core" }
snow_floppy = { version = "0.1.0", path = "../floppy" }
strum = { version = "0.27.1", features = ["derive"] }

[lints]
workspace = true
