[package]
name = "testrunner"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["derive"] }
env_logger = "0.11.8"
gif = "0.13.1"
itertools = "0.14.0"
log = "0.4.27"
num_cpus = "1.16.0"
png = "0.17.16"
rusty_pool = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
snow_core = { version = "1.0.0", path = "../core" }
snow_floppy = { version = "1.0.0", path = "../floppy" }
strum = { version = "0.27.1", features = ["derive"] }

[lints]
workspace = true
